--- a/src/components/App.css
+++ b/src/components/App.css
@@ -5,3 +5,17 @@ body {
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 }
+
+#app>.container{
+	min-height: 100vh;
+	display: flex;
+	flex-direction: column;
+}
+#app.mobile .form-control:focus {
+	border-color: #ced4da;
+	box-shadow: none;
+}
+
+#app .content {
+	flex: 1;
+}
